* Ticket #4991, Text subtitles: "opaque box" outlines will now always be drawn even if the border width is set to 0.
  The size of the text is independent of the border width so there is no reason not to draw that part
* Ticket #5056, Position the text subtitles relative to the video frame by default
* Updated MediaInfoLib to v0.7.71
* Updated ZenLib to v0.4.29 r498
* Updated Little CMS to v2.7 (git 8174681)
* Updated Unrar to v5.2.2
* Updated LAV Filters to v0.63.0.12:
    - LAV Video Decoder: Fix a crash when the video height is not a multiple of 2
    - Ticket #3144, LAV Splitter: Support librtmp parameters for RTMP streams
    - Ticket #4407, LAV Video Decoder: Fix a rare crash when checking the compatibility with hardware decoding
    - Ticket #5030, LAV Video Decoder: The video timestamps could be wrong in some cases when using H264 DXVA decoding.
      This could lead to synchronization issue with the audio
    - Ticket #5047, LAV Splitter: Fix missing tracks in (m2)ts files
* Updated Arabic, Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
  Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Thai, Turkish,
  Ukrainian and Vietnamese translations
! XySubFilter: Always preserve subtitle frame aspect ratio
! Properties dialog: The creation time did not account for the local timezone
! Properties dialog: More consistent UI for the "Resources" tab
! PGSSub: Subtitles could have opaque background instead of transparent one
! Ticket #2420, Improve the reliability of the DirectShow hooks
! Ticket #2626, Fix some rare crashes when another application prevents MPC-HC from rendering the video
! Ticket #2953, DVB: Fix crash when closing window right after switching channel
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result